google analytics id

--- a/_config.yml
+++ b/_config.yml
@@ -57,4 +57,4 @@ defaults:
       share: true
       related: true
       show_date: true
-google_analytics: "G-S9LYTKEDYY Zmienić"
+google_analytics: "G-58QEKJP1F1"
