--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author_profile: true
 author:
   name     : "Gosia Radzymińska"
   avatar   : "/images/miednica.jpg"
-  bio      : "Certyfikowana fizjoterapeutka uroginekologiczna.\n\nFizjoterapeutka urologiczna mężczyzn"
+  bio      : "Certyfikowana fizjoterapeutka uroginekologiczna\n\nFizjoterapeutka urologiczna mężczyzn"
   location : "Kraków, Poland"
   links:
     - label: Email
