changes requested by ges request by zonislaw

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ author:
       url: "tel:+48501288448"
     - label: Instagram
       icon: "fab fa-fw fa-instagram-square"
-      url: "https://www.instagram.com/gosiamamafizjo/"
+      url: "https://www.instagram.com/gosia.fizjouro/"
     - label: ZnanyLekarz
       icon: "fa-znanylekarz"
       url: "https://www.znanylekarz.pl/malgorzata-radzyminska"
@@ -48,7 +48,7 @@ footer:
       url: "tel:+48501288448"
     - label: Instagram
       icon: "fab fa-fw fa-instagram-square"
-      url: "https://www.instagram.com/gosiamamafizjo/"
+      url: "https://www.instagram.com/gosia.fizjouro/"
     - label: ZnanyLekarz
       icon: "fa-znanylekarz"
       url: "https://www.znanylekarz.pl/malgorzata-radzyminska"
